fix teh shifting of the tests when filter is on

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -16,6 +16,11 @@ body,
   font-weight: 700;
 }
 
+html {
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
+}
+
 body {
   background: #f5f5f5;
   margin: 0;
